[FIX] web: external_layout_standard : headers would cropp address in some templates.
taskid: 2198488

--- a/addons/web/static/src/scss/layout_boxed.scss
+++ b/addons/web/static/src/scss/layout_boxed.scss
@@ -94,3 +94,6 @@
         }
     }
 }
+.boxed_vertical_space{
+    padding-top: 3.5em;
+}
