--- a/addons/web/static/src/scss/layout_standard.scss
+++ b/addons/web/static/src/scss/layout_standard.scss
@@ -4,3 +4,6 @@
         white-space: nowrap;
     }
 }
+.standard_vertical_space{
+    padding-top: 2em;
+}
